# rust-shards

./: .env  Cargo.toml  diesel.toml  docker-compose.yaml  notes.txt
migrations/2025-05-29-000000_create_users/: up.sql
migrations/2025-05-29-000001_create_roles/: up.sql
migrations/2025-05-29-000002_create_categories/: down.sql  up.sql
migrations/2025-05-29-015806_create_shards/: down.sql  up.sql
migrations/2025-05-29-170310_create_templates/: down.sql  up.sql
migrations/2025-05-29-171615_create_circles/: down.sql  up.sql
migrations/2025-05-29-171935_create_circle_members/: down.sql  up.sql
migrations/2025-05-29-172547_create_user_roles/: down.sql  up.sql
migrations/2025-05-29-173530_create_user_friends/: down.sql  up.sql
src/: commands.rs  lib.rs  main.rs  models.rs  repositories.rs  schema.rs  temp
src/rocket_routes/: categories.rs  circle_members.rs  circles.rs  mod.rs  roles.rs  shards.rs  templates.rs  user_friends.rs  user_roles.rs  users.rs
